Add sidecar tab to media analysis
